# pytcx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  pytcx.py  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: code_quality.yml  deployment.yml  pull_request.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
pygpx/: __init__.py
pytcx/: __init__.py
test/: Watergrove.tcx  test_pygpx.py  test_pytcx.py
